# deeplabv3-_Deploy_to_RDKS100P

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cc
tools/: infer.sh  remake.sh
